argocd/aws/666628074417/clusters/cbioportal-prod/apps/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: default
  annotations:
    ingress.kubernetes.io/proxy-body-size: 512m
    ingress.kubernetes.io/proxy-connect-timeout: "300"
    ingress.kubernetes.io/proxy-read-timeout: "300"
    ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/backend-protocol: http
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: '*'
spec:
  ingressClassName: nginx
  rules:
    - host: keycloak.cbioportal.mskcc.org
      http:
        paths:
          - backend:
              service:
                name: keycloak-http
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: keycloak.cbioportal.aws.mskcc.org
      http:
        paths:
          - backend:
              service:
                name: keycloak-http
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: keycloak-beta.cbioportal.aws.mskcc.org
      http:
        paths:
          - backend:
              service:
                name: keycloak-http
                port:
                  number: 80
            path: /
            pathType: Prefix
